Bug 167956 - CRASH: opening a second document with tabbed notebookbar ( WORKAROUND: Change UI to Standard Toolbar from View - User Interface)
Summary: CRASH: opening a second document with tabbed notebookbar ( WORKAROUND: Change...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: bibisected, bisected, regression
: 167981 168028 168033 168034 168037 168065 168084 168106 168115 168123 168124 168134 168150 168163 168165 168198 168217 168229 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-08-14 15:02 UTC by Xisco Faulí
Modified: 2026-01-17 13:42 UTC (History)
22 users (show)

See Also:
Crash report or crash signature: ["StyleItemController::DrawEntry(OutputDevice &,SfxStyleSheetBase *)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-08-14 15:02:24 UTC
Steps to reproduce:
1. Open Writer
2. View - User Interface - Tabbed
3. Click Apply
4. On the Home tab, click on any Paragraph style ( e.g. Body Text )
5. File - Open - Select any existing Writer document

-> Crash

Reproduced in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a0ae1b0cf2661e7be9ea042e5357530f5fb412f5
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-08-14 15:03:39 UTC
Regression introduced by 

commit 7920c94ed85c648bc301e1d32171ffa20d056083	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Jun 24 12:36:19 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Jun 24 15:15:04 2025 +0200
tree c1d9b49878a59d8cf7e6f0bced344835998ed18c
parent 380bd856d1a67a4e2db27162502a6fb56e17899a [diff]

tdf#166932 UpdateStylesList followup

and its previous commit

commit 7359e9c742d35c999eb9add524052887805e7b26	[log]
author	Noel Grandin <noelgrandin@gmail.com>	Wed Jun 11 12:35:14 2025 +0200
committer	Noel Grandin <noelgrandin@gmail.com>	Wed Jun 11 16:03:34 2025 +0200
tree 5019abfe2b49161fb0f9d2991111e0b0ed52a311
parent 612ba7b2bc5d1d12c10287094263f6d31983a3d8 [diff]

tdf#166932 avoid O(n^2) loop in UpdateStylesList
Comment 2 Xisco Faulí 2025-08-14 15:04:28 UTC
This is one of the most reported crashes in 25.8
Comment 3 Noel Grandin 2025-08-14 16:04:49 UTC
Seems to be fixed on master?
Comment 4 Noel Grandin 2025-08-14 17:16:03 UTC
Never mind, I can trigger it on master, just not always.
Comment 5 Xisco Faulí 2025-08-14 19:39:36 UTC
(In reply to Noel Grandin from comment #4)
> Never mind, I can trigger it on master, just not always.

yep, it took me a while to find reliable steps to reproduce it, but with the steps described it seems to crash for me all the time
Comment 6 Commit Notification 2025-08-15 06:10:49 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/89a16ae49307662dbce3d609b4e178e61a905528

tdf#167956 crash opening a second document with tabbed notebookbar

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-08-15 20:26:47 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/909488c67f5a8d50ad2b0ce7f90870776793013c

tdf#167956 crash opening a second document with tabbed notebookbar

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2025-08-20 10:27:21 UTC
*** Bug 167981 has been marked as a duplicate of this bug. ***
Comment 9 Xisco Faulí 2025-08-21 10:08:37 UTC
*** Bug 168034 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2025-08-21 10:10:17 UTC
*** Bug 168033 has been marked as a duplicate of this bug. ***
Comment 11 Xisco Faulí 2025-08-21 13:48:59 UTC
*** Bug 168034 has been marked as a duplicate of this bug. ***
Comment 12 Xisco Faulí 2025-08-21 14:19:09 UTC
*** Bug 168037 has been marked as a duplicate of this bug. ***
Comment 13 Xisco Faulí 2025-08-24 19:20:33 UTC
*** Bug 168065 has been marked as a duplicate of this bug. ***
Comment 14 Xisco Faulí 2025-08-25 08:53:58 UTC
*** Bug 168084 has been marked as a duplicate of this bug. ***
Comment 15 Xisco Faulí 2025-08-26 10:37:05 UTC
*** Bug 168115 has been marked as a duplicate of this bug. ***
Comment 16 Xisco Faulí 2025-08-26 16:04:07 UTC
*** Bug 168106 has been marked as a duplicate of this bug. ***
Comment 17 Mike Kaganski 2025-08-26 18:05:05 UTC
*** Bug 168124 has been marked as a duplicate of this bug. ***
Comment 18 Mike Kaganski 2025-08-26 18:05:11 UTC
*** Bug 168123 has been marked as a duplicate of this bug. ***
Comment 19 Mike Kaganski 2025-08-27 12:26:13 UTC
*** Bug 168134 has been marked as a duplicate of this bug. ***
Comment 20 Commit Notification 2025-08-27 16:02:54 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7ccc90a37fc179124f991c4629d90dee82bc4fe2

tdf#167956: sw: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Mike Kaganski 2025-08-28 05:13:02 UTC
*** Bug 168150 has been marked as a duplicate of this bug. ***
Comment 22 BogdanB 2025-08-28 18:32:34 UTC
*** Bug 168163 has been marked as a duplicate of this bug. ***
Comment 23 Mike Kaganski 2025-08-28 19:55:59 UTC
*** Bug 168165 has been marked as a duplicate of this bug. ***
Comment 24 Mike Kaganski 2025-09-01 06:46:29 UTC
*** Bug 168217 has been marked as a duplicate of this bug. ***
Comment 25 Xisco Faulí 2025-09-01 08:43:29 UTC
*** Bug 168198 has been marked as a duplicate of this bug. ***
Comment 26 BogdanB 2025-09-01 12:40:49 UTC
*** Bug 168229 has been marked as a duplicate of this bug. ***
Comment 27 Xisco Faulí 2025-09-02 07:45:00 UTC
*** Bug 168028 has been marked as a duplicate of this bug. ***
Comment 28 douglaspaulo 2025-10-27 11:51:25 UTC Comment hidden (spam)