tdf#167956 crash opening a second document with tabbed notebookbar

Revert
    commit 7359e9c742d35c999eb9add524052887805e7b26
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Wed Jun 11 12:35:14 2025 +0200
    tdf#166932 avoid O(n^2) loop in UpdateStylesList

Rather surprising that the original patch worked at all,
because SwStyleSheetIterator is returning a dummy SfxStyleSheetBase,
which is updated on every call to SwStyleSheetIterator::Next
and then freed when SwStyleSheetIterator destructs.

Change-Id: I310731e659b5b1bf74f15918371fdd16934d4c3f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189634
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189725