svx/source/inc/StylesPreviewWindow.hxx
@@ -64,10 +64,10 @@ class StyleItemController
 public:
     StyleItemController(std::pair<OUString, OUString> aStyleName);
 
-    void Paint(vcl::RenderContext& rRenderContext, SfxStyleSheetBase* pStyleHint = nullptr);
+    void Paint(vcl::RenderContext& rRenderContext);
 
 private:
-    void DrawEntry(vcl::RenderContext& rRenderContext, SfxStyleSheetBase* pStyleHint);
+    void DrawEntry(vcl::RenderContext& rRenderContext);
     void DrawText(vcl::RenderContext& rRenderContext);
     void DrawHighlight(vcl::RenderContext& rRenderContext, Color aFontBack);
     static void DrawContentBackground(vcl::RenderContext& rRenderContext,
@@ -123,8 +123,7 @@ public:
 
     void Select(const OUString& rStyleName);
     void RequestStylesListUpdate();
-    static BitmapEx GetCachedPreview(const std::pair<OUString, OUString>& rStyle,
-                                     SfxStyleSheetBase* pStyleHint = nullptr);
+    static BitmapEx GetCachedPreview(const std::pair<OUString, OUString>& rStyle);
     static OString GetCachedPreviewJson(const std::pair<OUString, OUString>& rStyle);
 
 private:
